app-code/bazarr/bazarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: media
  labels:
    app: bazarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: atlantis

      dnsPolicy: ClusterFirst
      dnsConfig:
        nameservers:
          - 8.8.8.8
          - 1.1.1.1
        options:
          - name: ndots
            value: "1"

      securityContext:
        seccompProfile:
          type: Unconfined
        appArmorProfile:
          type: Unconfined

      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:latest
          securityContext:
            allowPrivilegeEscalation: true
          ports:
            - containerPort: 6767
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: nexus-pool
              mountPath: /data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: bazarr-config-pvc
        - name: nexus-pool
          hostPath:
            path: /mnt/nexus_pool
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr-svc
  namespace: media
spec:
  selector:
    app: bazarr
  type: NodePort
  ports:
    - name: http
      port: 6767
      targetPort: 6767
      nodePort: 30467
