app-code/bazarr/bazarr-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr-ingress
  namespace: media
spec:
  entryPoints: [web, websecure]
  routes:
    - match: Host(`bazarr.nexus.link`)
      kind: Rule
      middlewares: [{name: authentik-forwardauth, namespace: media}]
      services: [{name: bazarr-svc, port: 6767}]
